Fix: (1)accordion animation (2)close btn

--- a/src/app/form-arr-dialog/form-arr-dialog.component.html
+++ b/src/app/form-arr-dialog/form-arr-dialog.component.html
@@ -1,7 +1,7 @@
 <div class="container">
   <form [formGroup]="fg">
     <div formArrayName="typeGroups">
-      <mat-accordion>
+      <mat-accordion [@.disabled]="true">
         <mat-expansion-panel
           *ngFor="let type of typeGroups()?.controls; let idx = index"
           [formGroupName]="idx"
