--- a/src/app/form-arr-dialog/form-arr-dialog.component.scss
+++ b/src/app/form-arr-dialog/form-arr-dialog.component.scss
@@ -1,3 +1,11 @@
+#title {
+  margin-bottom: 1em;
+  font-family: 'Courier New', Courier, monospace;
+  font-weight: bold;
+  font-size: 1.2em;
+  text-align: center;
+}
+
 .container {
   margin: 1em;
 }
